syntax = "proto3";
option go_package = "proto/reservation";
   
service InternalReservationServiceRPC{
     rpc DoesGuestHaveActiveReservations(DoesGuestHaveActiveReservationsRequest) returns (DoesGuestHaveActiveReservationsResponse);
     rpc DoesHostHaveActiveReservations(DoesHostHaveActiveReservationsRequest) returns (DoesHostHaveActiveReservationsResponse);
	 rpc IsAccommodationAvailableForDateRange(IsAccommodationAvailableForDateRangeRequest) returns (IsAccommodationAvailableForDateRangeResponse);
     rpc IsHostFeatured(IsHostFeaturedRequest) returns (IsHostFeaturedResponse); 
}

message ReservationTimeFrameProto {
  string startDate = 6;
  string endDate = 7;
}

message DoesGuestHaveActiveReservationsRequest{
    string guestId = 1;
}

message DoesGuestHaveActiveReservationsResponse{
    bool response = 1;
}

message DoesHostHaveActiveReservationsRequest{
    string hostId = 1;
}

message DoesHostHaveActiveReservationsResponse{
    bool response = 1;
}

message IsAccommodationAvailableForDateRangeRequest{
    string accommodationId = 1;
    ReservationTimeFrameProto timeFrame = 2;
}

message IsAccommodationAvailableForDateRangeResponse{
    bool isAvailable = 1;
}

message IsHostFeaturedRequest{
    string hostId = 1;
}

message IsHostFeaturedResponse{
    bool isFeatured = 1;
}
